changes to run app in stand alone tomcat server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dentocar_db
-spring.datasource.username=dentocar_user
-spring.datasource.password=test@123
+spring.datasource.username=dentocar
+spring.datasource.password=2g#GuNhfOy
 spring.datasource.driver=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
