--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>9.4-1201-jdbc41</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>ROOT</finalName>
